# esameLabGestione

./: Account.cpp  Account.h  CMakeLists.txt  Carte.cpp  Carte.h  Data.h  Finanza.cpp  Finanza.h  Transazione.h  main.cpp
test/: AccountTest.cpp  CMakeLists.txt  CarteTest.cpp  DataTest.cpp  FinanzaTest.cpp  TransazioneTest.cpp
